# cnavsim

./: CMakeLists.txt  plot_trajectory  plot_trajectory.gp
src/: CMakeLists.txt  body.cpp  body.hpp  main.cpp  physics.cpp  physics.hpp  vessel.cpp  vessel.hpp
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt
